--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css"">
     <title>TeamPro's website</title>
 </head>
 <body>
-    <h1>Cool stuff!</h1>
+    <div class="titleDiv">
+    <h1>TEAM PRO</h1>
+    </div>
 </body>
 </html>
