html(content):h3 and footer added

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,12 @@
 <body>
     <h1>Cool stuff!</h1>
     <button type="button">Click Me!</button>
-
+    <h2>Click the button to join the experience!</h2>
+<footer>
+    <p>Julien Menten</p>
+    <p>Chiel Habils</p>
+    <p>Tim Willaert</p>
+    <p>Britt Leysen</p>
+</footer>
 </body>
 </html>
