--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     <h2>Click the button to join the experience!</h2>
 <footer>
     <p>Julien Menten</p>
+    <!---
     <p>Chiel Habils</p>
-    <p>Tim Willaert</p>
-    <p>Britt Leysen</p>
+        <p>Tim Willaert</p>
+   
+       --  <p>Britt Leysen</p>
+       --
+       --
+    -->
 </footer>
 </body>  
 </html>
