html(comment): footer commented 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <p>Julien Menten</p>
     <p>Chiel Habils</p>
     <p>Tim Willaert</p>
-    <p>Britt Leysen</p>
+    <!--- 
+       --  <p>Britt Leysen</p>
+       --
+       --
+    -->
 </footer>
 </body>  
 </html>
