html(comment): footer commented 2

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <footer>
     <p>Julien Menten</p>
     <p>Chiel Habils</p>
-    <p>Tim Willaert</p>
-    <!--- 
+    <!---    <p>Tim Willaert</p>
+   
        --  <p>Britt Leysen</p>
        --
        --
