html(comment): footer commented 3

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <h2>Click the button to join the experience!</h2>
 <footer>
     <p>Julien Menten</p>
+    <!---
     <p>Chiel Habils</p>
-    <!---    <p>Tim Willaert</p>
+        <p>Tim Willaert</p>
    
        --  <p>Britt Leysen</p>
        --
