Feature(About): Added link from homepage to about page

--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!-- Code by Julien Menten-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +11,6 @@
     <p>Britt, Tim, Chiel & Julien are a team of trained professionals. They have accomplished the outmost extravagant things!</p>
     <br>
     <p>Last year, they blessed the world with their Final Show app, which was highly regarded as a masterpiece by most.</p>
+   
 </body>
 </html>
