--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <h1>Cool stuff!</h1>
     <button type="button">Click Me!</button>
+    <a href="/about.html">Get to know the team</a>
     <h2>Click the button to join the experience!</h2>
 <footer>
     <p>Julien Menten</p>
