--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@
     <p>Britt, Tim, Chiel & Julien are a team of trained professionals. They have accomplished the outmost extravagant things!</p>
     <br>
     <p>Last year, they blessed the world with their Final Show app, which was highly regarded as a masterpiece by most.</p>
-    <img href="https://picsum.photos/id/0/200/300" height="200" width="300">
+    <img src="https://picsum.photos/id/0/200/300" height="300" width="200">
 </body>
 </html>
